--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -47,12 +47,24 @@ transforms:
       - kubernetes_remap
     route:
       nginx: .custom_app_name == "ingress-nginx"
+  kubernetes_filter_nginx:
+    type: filter
+    inputs:
+      - kubernetes_route_nginx.nginx
+    condition: length(.message) > 1
   kubernetes_remap_nginx:
     type: remap
     inputs:
-      - kubernetes_route_nginx.nginx
+      - kubernetes_filter_nginx
     source: |
       .message = parse_json!(.message)
+
+  # kubernetes_remap_nginx:
+  #   type: remap
+  #   inputs:
+  #     - kubernetes_route_nginx.nginx
+  #   source: |
+  #     .message = parse_json!(.message)
 
 
 
