--- a/kubernetes/apps/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.2.0
+      version: 2.4.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -24,6 +24,7 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+      remediateLastFailure: true # remediate the last failure, when no retries remain
   uninstall:
     keepHistory: false
   values:
