--- a/kubernetes/apps/networking/nginx/internal/kustomization.yaml
+++ b/kubernetes/apps/networking/nginx/internal/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
+  - ./diskstation.yaml
   # - ./plex.yaml
   #- ./proxmox.yaml
