--- a/kubernetes/apps/flux-system/addons/app/notifications/alert-manager/notification.yaml
+++ b/kubernetes/apps/flux-system/addons/app/notifications/alert-manager/notification.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/notification.toolkit.fluxcd.io/provider_v1beta2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/provider-notification-v1beta3.json
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
@@ -12,7 +12,7 @@ spec:
   # address: http://vmalertmanager-victoria-metrics.monitoring.svc.cluster.local:9093/api/v2/alerts/
   interval: 10m
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/notification.toolkit.fluxcd.io/alert_v1beta2.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/alert-notification-v1beta3.json
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
