--- a/kubernetes/apps/flux-system/addons/app/notifications/github/kustomization.yaml
+++ b/kubernetes/apps/flux-system/addons/app/notifications/github/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=https://json.schemastore.org/kustomization
-apiVersion: kustomize.config.k8s.io/v1beta1
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1beta2.json
+apiVersion: kustomize.config.k8s.io/v1beta2
 kind: Kustomization
 resources:
   - ./notification.yaml
