--- a/kubernetes/apps/media/hydra/app/helmrelease.yaml
+++ b/kubernetes/apps/media/hydra/app/helmrelease.yaml
@@ -6,30 +6,49 @@ metadata:
   name: hydra
   namespace: media
 spec:
-  interval: 5m
+  interval: 30m
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.4.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
-      interval: 5m
+  maxHistory: 2
   install:
-    createNamespace: true
     remediation:
-      retries: 5
+      retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
-    image:
-      #repository: docker.io/linuxserver/nzbhydra2
-      repository: ghcr.io/hotio/nzbhydra2
-      tag: latest
-    env:
-      TZ: "${TIMEZONE}"
+    controllers:
+      main:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          main:
+            image:
+              #repository: docker.io/linuxserver/nzbhydra2
+              repository: ghcr.io/hotio/nzbhydra2
+              tag: release-91bc68a
+            env:
+              TZ: "${TIMEZONE}"
+            resources:
+            requests:
+              cpu: 10m
+              memory: 256M
+            limits:
+              memory: 1Gi
+    service:
+      main:
+        ports:
+          http:
+            port: 5076
     persistence:
       data:
         enabled: true
@@ -39,14 +58,31 @@ spec:
             mountPath: /config
           - path: download
             mountPath: /download
-    service:
-      main:
-        ports:
-          http:
-            port: 5076
-    resources:
-      requests:
-        cpu: 10m
-        memory: 555Mi
-      limits:
-        memory: 800Mi
+
+  # values:
+  #   image:
+  #     #repository: docker.io/linuxserver/nzbhydra2
+  #     repository: ghcr.io/hotio/nzbhydra2
+  #     tag: release-91bc68a
+  #   env:
+  #     TZ: "${TIMEZONE}"
+  #   persistence:
+  #     data:
+  #       enabled: true
+  #       existingClaim: pvc-hydra-config
+  #       subPath:
+  #         - path: config
+  #           mountPath: /config
+  #         - path: download
+  #           mountPath: /download
+  #   service:
+  #     main:
+  #       ports:
+  #         http:
+  #           port: 5076
+  #   resources:
+  #     requests:
+  #       cpu: 10m
+  #       memory: 555Mi
+  #     limits:
+  #       memory: 800Mi
