--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./bazarr/ks.yaml
-  #- ./hydra/ks.yaml
+  - ./hydra/ks.yaml
   - ./prowlarr/ks.yaml
   #- ./qbittorrent/ks.yaml
   - ./plex/ks.yaml
