--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
- #- ./bazarr/ks.yaml
+  - ./bazarr/ks.yaml
   - ./hydra/ks.yaml
   - ./prowlarr/ks.yaml
   #- ./qbittorrent/ks.yaml
