--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./namespace.yaml
   - ./bazarr/ks.yaml
   - ./hydra/ks.yaml
-  - ./prowlarr/ks.yaml
+  #- ./prowlarr/ks.yaml
   #- ./qbittorrent/ks.yaml
   - ./plex/ks.yaml
   - ./radarr/ks.yaml
