--- a/kubernetes/apps/media/prowlarr/tools/flaresolverr/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/tools/flaresolverr/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.4.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -25,20 +25,44 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    image:
-      repository: ghcr.io/flaresolverr/flaresolverr
-      tag: v3.3.12
-    env:
-      TZ: "${TIMEZONE}"
-      LOG_LEVEL: info
+    controllers:
+      main:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          main:
+            image:
+              repository: ghcr.io/flaresolverr/flaresolverr
+              tag: v3.3.12
+            env:
+              TZ: "${TIMEZONE}"
+              LOG_LEVEL: info
+            resources:
+            requests:
+              cpu: 10m
+              memory: 100M
+            limits:
+              memory: 1Gi
     service:
       main:
         ports:
           http:
             port: 8191
-    resources:
-      requests:
-        memory: 100Mi
-        cpu: 100m
-      limits:
-        memory: 1024Mi
+  # values:
+  #   image:
+  #     repository: ghcr.io/flaresolverr/flaresolverr
+  #     tag: v3.3.12
+  #   env:
+  #     TZ: "${TIMEZONE}"
+  #     LOG_LEVEL: info
+  #   service:
+  #     main:
+  #       ports:
+  #         http:
+  #           port: 8191
+  #   resources:
+  #     requests:
+  #       memory: 100Mi
+  #       cpu: 100m
+  #     limits:
+  #       memory: 1024Mi
