--- a/kubernetes/apps/media/youtubedl/app/helmrelease.yaml
+++ b/kubernetes/apps/media/youtubedl/app/helmrelease.yaml
@@ -1,5 +1,6 @@
 # https://github.com/Tzahi12345/YoutubeDL-Material/blob/master/docker-compose.yml
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -10,7 +11,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.0.3
+      version: 2.4.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
