--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./alertmanager/ks.yaml
   - ./blackbox-exporter/ks.yaml
   - ./gatus/ks.yaml
-  #- ./grafana/ks.yaml
+  - ./grafana/ks.yaml
   - ./influxdb/ks.yaml
   - ./karma/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
