--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -17,5 +17,5 @@ resources:
   - ./promlens/ks.yaml
   - ./parseable/ks.yaml
   - ./smartctl-exporter/ks.yaml
-  - ./thanos/ks.yaml
+ # - ./thanos/ks.yaml
   - ./vector/ks.yaml
