--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
-  #- ./tautulli/ks.yaml
+  - ./tautulli/ks.yaml
   - ./youtubedl/ks.yaml
