--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./grafana/ks.yaml
   - ./influxdb/ks.yaml
   - ./karma/ks.yaml
-  #- ./kube-prometheus-stack/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
   - ./kube-state-metrics/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
