--- a/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
   primaryUpdateStrategy: unsupervised
   storage:
     size: 10Gi
-    storageClass: local-path
+    storageClass: local-hostpath
   enableSuperuserAccess: true
   superuserSecret:
     name: cloudnative-pg-secrets
