--- a/kubernetes/apps/kube-system/minio/app/secret.sops.yaml
+++ b/kubernetes/apps/kube-system/minio/app/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: minio
+    name: minio-secret
     namespace: kube-system
 stringData:
     MINIO_ROOT_USER: ENC[AES256_GCM,data:oY+l0IJDg+G5XA==,iv:zSyySvbKxZFrTd4ptP3OUH0C04hx20sHI+ic6dODS3c=,tag:gP3y4xoS3enoE3FDCJa1pg==,type:str]
@@ -22,8 +22,8 @@ sops:
             RXE1Zk5BdnpxREtNeHlwYVc3SHljZDgKhoaoI1EJ32Z51zrH1i5cZdRtRSiCdySd
             dWIXUb7IBPLxpl3giwYIB2hIZiLygOkIDDtIya1SXt8voPWx7UPWiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-13T14:37:40Z"
-    mac: ENC[AES256_GCM,data:Gi8wQiOSHJoG+GUcSEFBhMVVQQDCgiitfM0O+0NZQE6fMTredeLGCsomgxTRwfiavcTZ7c/SZoE87c9pgU5thC+N+K68FxSJt2qiFeRlRC+YwElBHzcCZy0i8jK12Q9R9eqfbdNstgE7BQsMTMsujvciKHgQ1pdJ1l0zsIYSeNU=,iv:O2DoytiMWDED1EA9V6Pi478RMXuENEbCPqzM2cmpFwY=,tag:DJ2xiJzyx1Ql3Kn5uQRzBQ==,type:str]
+    lastmodified: "2023-12-24T21:22:33Z"
+    mac: ENC[AES256_GCM,data:iC1TN3xhmTjywfXo4Ncip2eG+EQmshgqnIiTt2TeOtOexDjFTnO2LfboLdFuCujWGfyRZmk+rflmEMcYpKZgkpQ2tW1Axt82bvOt1k7xIvJ/IJrkEVY4k9MmEULWz/GhHVTjg3t2yYYkm0o0e3woCsv8nWWz8c3S8na5cTyI4QY=,iv:Gkp5lfRioYnKQCJeJCc3RCYheD8dUcAfn1s9XKq1R84=,tag:/tgiUZC+lGhTPVWL04ICGA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
