--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./intel-device-plugin/ks.yaml
   - ./local-path-provisioner/ks.yaml
   - ./metrics-server/ks.yaml
-  #- ./minio/ks.yaml
+  - ./minio/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
 
