--- a/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/minio/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
               MINIO_IDENTITY_OPENID_CLIENT_SECRET: "${SECRET_MINIO_OAUTH_CLIENT_SECRET}"
               MINIO_IDENTITY_OPENID_CLAIM_NAME: groups
               MINIO_IDENTITY_OPENID_CLAIM_PREFIX: authelia
-              MINIO_IDENTITY_OPENID_SCOPES: openid,profile,groups,email
+              MINIO_IDENTITY_OPENID_SCOPES: openid,profile,groups,email,minio
               MINIO_IDENTITY_OPENID_REDIRECT_URI: https://minio.${SECRET_DOMAIN}/oauth_callback
               MINIO_IDENTITY_OPENID_CLAIM_USERINFO: "on"
             envFrom:
