--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -66,5 +66,5 @@ identity_providers:
         authorization_policy: one_factor
         pre_configured_consent_duration: 1y
         redirect_uris: ["https://minio.${SECRET_DOMAIN}/oauth_callback"]
-        scopes: ["openid", "profile", "groups", "email", "minio"]
+        scopes: ["openid", "profile", "groups", "email"]
         userinfo_signing_algorithm: none
