--- a/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
+++ b/kubernetes/apps/monitoring/vector/app/aggregator/config/vector.yaml
@@ -150,7 +150,6 @@ sinks:
   kubernetes:
     inputs:
       - kubernetes_remap
-      - kubernetes_remap_nginx
     type: loki
     endpoint: http://loki-gateway.monitoring.svc.cluster.local
     encoding: { codec: json }
@@ -162,6 +161,22 @@ sinks:
       k8_namespace: '{{ kubernetes.pod_namespace }}'
       k8_node: '{{ kubernetes.pod_node_name }}'
       k8_instance: '{{ custom_instance_name }}'
+
+  kubernetes_nginx_parsed:
+    inputs:
+      - geo_enriched
+    type: loki
+    endpoint: http://loki-gateway.monitoring.svc.cluster.local
+    encoding: { codec: json }
+    out_of_order_action: rewrite_timestamp
+    remove_label_fields: true
+    remove_timestamp: true
+    labels:
+      k8_app: nginx-parsed
+      k8_namespace: '{{ kubernetes.pod_namespace }}'
+      k8_node: '{{ kubernetes.pod_node_name }}'
+      k8_instance: '{{ custom_instance_name }}'
+
 
   syslog:
     inputs: ["syslog_source"]
