--- a/kubernetes/apps/default/homepage/app/kustomization.yaml
+++ b/kubernetes/apps/default/homepage/app/kustomization.yaml
@@ -4,13 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  - ./pvc.yaml
+  - ./configmap.yaml
   - ./helmrelease.yaml
-configMapGenerator:
-  - name: frigate-configmap
-    files:
-      - config.yml=./config/config.yml
-generatorOptions:
-  disableNameSuffixHash: true
-  # annotations:
-  #   kustomize.toolkit.fluxcd.io/substitute: disabled
+  - ./homepage.sops.yaml
+  - ./rbac.yaml
