--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -95,7 +95,7 @@ data:
         label: Home
         latitude: {{HOMEPAGE_VAR_HOME_LATITUDE}}
         longitude: {{HOMEPAGE_VAR_HOME_LONGITUDE}}
-        units: metric
+        units: imperial
         cache: 5
     - kubernetes:
         cluster:
