--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -18,6 +18,14 @@ data:
   services.yaml: |
     ---
     - Media:
+        - Plex:
+            icon: plex.png
+            href: https://plex.${SECRET_DOMAIN}
+            description: Data Viz
+            widget:
+              type: plex
+              url: http://192.168.2.200:32400
+              key: {{HOMEPAGE_VAR_PLEX_TOKEN}}
         - Sabnzbd:
             icon: sabnzbd.png
             href: https://sabnzbd.${SECRET_DOMAIN}
@@ -60,6 +68,15 @@ data:
               username: {{HOMEPAGE_VAR_SYNOLOGY_USERNAME}}
               password: {{HOMEPAGE_VAR_SYNOLOGY_PASSWORD}}
               #volume: volume_N # optional
+        - Grafana:
+            icon: grafana.png
+            href: http://192.168.1.2:5000
+            description: Data Viz
+            widget:
+              type: grafana
+              url: http://grafana.monitoring.svc.cluster.local
+              username: {{HOMEPAGE_VAR_GRAFANA_USERNAME}}
+              password: {{HOMEPAGE_VAR_GRAFANA_PASSWORD}}
     - Favorites:
         - My GitHub Repo:
             icon: si-github
