--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -57,6 +57,8 @@ data:
               type: bazarr
               url: http://bazarr.media.svc.cluster.local:6767
               key: {{HOMEPAGE_VAR_BAZARR_KEY}}
+
+    - Services:
         - Diskstation:
             icon: diskstation.png
             href: http://192.168.1.2:5000
@@ -76,6 +78,8 @@ data:
               url: http://grafana.monitoring.svc.cluster.local:3000
               username: {{HOMEPAGE_VAR_GRAFANA_USERNAME}}
               password: {{HOMEPAGE_VAR_GRAFANA_PASSWORD}}
+
+
     - Favorites:
         - My GitHub Repo:
             icon: si-github
