--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -60,7 +60,7 @@ data:
 
     - Services:
         - Diskstation:
-            icon: diskstation.png
+            icon: synology-dsm.svg
             href: http://192.168.1.2:5000
             description: Synology DSM
             widget:
